# verbis

./: .gitignore  LICENSE  LICENSE.md  Makefile  Modelfile.custom-mistral  Modelfile.custom-mistral-instruct  Modelfile.custom-summarizer  Modelfile.custom-zephyr  README.md
doc/: EVALS.md  RELEASE.md
lamoid/: api.go  app.go  go.mod  go.sum  ollama.go  sync.go
lamoid/connectors/: all.go  connectors.go  google.go
lamoid/store/: store.go
lamoid/types/: connectors.go  types.go
lamoid/util/: util.go
macapp/: .gitignore  README.md  forge.config.ts  package-lock.json  package.json  tailwind.config.js  webpack.rules.ts
macapp/.webpack/main/: index.js  index.js.map
macapp/assets/: icon.icns
macapp/src/: app.css  app.tsx  client.ts  declarations.d.ts  index.ts  install.ts  renderer.tsx  types.ts
script/: eval_dataset_gen.py  eval_get_answers.py  eval_get_scores.py  model_download.py  notarize.sh  pyproject.toml  rerank.py  weaviate_backup_restore.sh
script/evals/: eval_run_output.csv  evaluation_metrics_output.csv  scores.json  testset_output.csv  testset_output_small.csv
service/: app.go  credentials.json  dump.rdb  go.mod  go.sum
service/connectors/: google.go
verbis/: README.md  api.go  app.go  boot.go  go.mod  go.sum  llm.go  ollama.go  sync.go
verbis/certs/: localhost-key.pem  localhost.pem
verbis/connectors/: all.go  base.go  binary.go  gmail.go  google.go  googledrive.go  outlook.go  slack.go
verbis/keychain/: keychain.go
verbis/store/: store.go
verbis/types/: connectors.go  store.go  types.go
verbis/util/: util.go
(+13 files in other folders)
