[tool.poetry]
name = "script"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
onnxruntime = "^1.17.3"
numpy = "^1.26.4"
tokenizers = "^0.19.1"
pyinstaller = "^6.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
