[tool.poetry]
name = "script"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
onnxruntime = "^1.17.3"
numpy = "^1.26.4"
tokenizers = "^0.19.1"
pyinstaller = "^6.6.0"
llama-index = "^0.10.46"
ragas = "^0.1.9"
langchain = {extras = ["openai"], version = "^0.2.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
